--- a/src/style.css
+++ b/src/style.css
@@ -1,11 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 :root {
     --button-border-radius: 10px;
+    --button-background-primary: #111b47;
+    --color-text-opposite: white;
+
+    --font-family: 'Roboto', sans-serif;
 }
 
 html,
 body {
     padding: 0;
     margin: 0;
+
+    font-family: var(--font-family);
 }
 
 * {
