--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;900&display=swap');
 
 :root {
     --button-border-radius: 10px;
     --button-background-primary: #111b47;
+
+    --color-background: white;
     --color-text: black;
     --color-text-opposite: white;
     --color-button: #111b47;
