button disabled prop

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -25,3 +25,8 @@
     color: var(--color-button);
     background: none;
 }
+
+.disabled {
+    pointer-events: none;
+    --color-button: #b6b8c1;
+}
