--- a/src/components/IndexPage/index.module.css
+++ b/src/components/IndexPage/index.module.css
@@ -3,39 +3,40 @@
 }
 
 .description {
-    color: darkslateblue;
+    color: #505f98;
 }
 
 .header {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+
+    padding: 0 128px;
+    margin-top: 5px;
 }
 
 .hero {
     width: 100%;
-    height: 120vh;
+    height: 100vh;
 
     background-image: url('/hero.jpg');
     background-size: cover;
 
     display: flex;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
-.hero .content {
-    flex: 1 1 33%;
+.content {
+    /* flex: 1 1 33%; */
+    /* flex: 1; */
+    /* width: 50%; */
 
-    padding: 0 10%;
+    padding: 0 128px;
 }
 
 .hero .heroButtons {
     padding-top: 64px;
-}
-
-.hero .empty {
-    flex: 1 1 33%;
 }
 
 .about {
