--- a/src/components/IndexPage/index.module.css
+++ b/src/components/IndexPage/index.module.css
@@ -40,7 +40,7 @@
 }
 
 .about {
-    margin: 120px 0;
+    /* margin: 120px 0; */
     width: 100%;
 
     display: flex;
@@ -62,7 +62,7 @@
 }
 
 .steps {
-    margin-top: 128px;
+    /* margin-top: 128px; */
 
     padding: 0 10%;
 
@@ -86,16 +86,4 @@
 
 .step .stepTitle {
     margin-bottom: 24px;
-}
-
-.cards {
-    margin: 128px 0;
-    padding: var(--padding);
-
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: center;
-
-    background-color: lightsteelblue;
 }
