--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -6,7 +6,7 @@
     align-items: center;
     /* justify-content: space-evenly; */
 
-    padding: 4px 128px;
+    padding: 4px 5%;
 
     background-color: var(--color-background);
 }
@@ -15,10 +15,22 @@
     flex: 1;
     display: flex;
     flex-direction: row;
+
 }
 
 .right {
     flex: 1;
     display: flex;
     flex-direction: row-reverse;
+}
+
+@media screen and (max-width : 480px) {
+    .left {
+        order: 1;
+        justify-content: space-around;
+        margin-top: 12px;
+    }
+    .header {
+        flex-wrap: wrap;
+    }
 }
