--- a/src/components/IndexPage/index.module.css
+++ b/src/components/IndexPage/index.module.css
@@ -31,6 +31,13 @@
     margin-right: 24px
 }
 
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5%;
+}
+
 @media screen and (max-width : 480px) {
     .storiesButton {
         margin-right: 0;
