--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -61,3 +61,9 @@
     font-size: 16px;
     line-height: 26px;
 }
+
+@media screen and (max-width : 480px) {
+    .button {
+        width: 100%;
+    }
+}
