--- a/src/components/IndexPage/index.module.css
+++ b/src/components/IndexPage/index.module.css
@@ -40,6 +40,7 @@
 
 @media screen and (max-width : 480px) {
     .storiesButton {
+        width: 100%;
         margin-right: 0;
         margin-bottom: 24px;
     }
