--- a/src/components/Step/styles.module.css
+++ b/src/components/Step/styles.module.css
@@ -19,3 +19,31 @@
 .arrow {
     margin-right: 24px;
 }
+
+@media screen and (max-width : 480px) {
+    .arrow {
+        display: none;
+    }
+
+    .content {
+        margin-right: 0;
+        margin-bottom: 48px;
+        width: 100%;
+
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .content h3 {
+        /* h2 size  */
+        font-size: 36px;
+        line-height: 48px;
+
+        margin: .25em 0;
+    }
+
+    .icon {
+        width: 30%;
+    }
+}
