--- a/src/components/Steps/styles.module.css
+++ b/src/components/Steps/styles.module.css
@@ -1,6 +1,6 @@
 .container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
     padding: 5%;
