--- a/src/components/PageSection/styles.module.css
+++ b/src/components/PageSection/styles.module.css
@@ -5,7 +5,6 @@
 
     display: flex;
     align-items: center;
-    /* justify-content: center; */
 }
 
 .back {
@@ -13,6 +12,9 @@
     width: 100%;
     height: 100%;
     z-index: -1;
+
+    /* prallax */
+    transform: translateZ(-1px) scale(2);
 
     /* background-image: url('/hero.jpg'); */
     /* background-size: cover; */
