--- a/src/components/Bubble/styles.module.css
+++ b/src/components/Bubble/styles.module.css
@@ -1,10 +1,3 @@
-.test {
-    animation-duration: 120s;
-    animation-name: name;
-    animation-iteration-count: infinite;
-}
-
-@keyframes name { 
-    from { transform: rotate(0deg); } 
-    to { transform: rotate(360deg); }  
+.img {
+    clip-path: url(#clipPath);
 }
