--- a/src/components/IndexPage/index.module.css
+++ b/src/components/IndexPage/index.module.css
@@ -1,5 +1,11 @@
 .layout {
     --padding: 0 128px;
+
+    /* parallax */
+    height: 100vh;
+    perspective: 1px;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .layout h2 {
