Button component href support + size fix

--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -3,6 +3,11 @@
     border: none;
 
     color: var(--color-text-opposite);
+
+    /* FOR LINK */
+    text-decoration: none;
+    display: flex;
+    align-items: center;
 }
 
 .button[disabled] {
