--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -8,18 +8,19 @@
 
     padding: 4px 5%;
 
+    z-index: 1000;
+
     background-color: var(--color-background);
 }
 
 .left {
-    flex: 1;
+    flex: 2;
     display: flex;
     flex-direction: row;
-
 }
 
 .right {
-    flex: 1;
+    flex: 2;
     display: flex;
     flex-direction: row-reverse;
 }
