--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -1,10 +1,10 @@
 .header {
-    position: absolute;
+    position: fixed;
     width: 100%;
 
     display: flex;
     align-items: center;
-    /* justify-content: space-evenly; */
+    z-index: 100;
 
     padding: 4px 5%;
 
