--- a/src/components/OpinionForm/styles.module.css
+++ b/src/components/OpinionForm/styles.module.css
@@ -2,6 +2,15 @@
     width: 100%;
 }
 
+.radio {
+    display: flex;
+    justify-content: space-around;
+}
+
+.radio input {
+    margin-left: 10px;
+}
+
 .row {
     display: flex;
 
