--- a/src/components/ProjectSlide/styles.module.css
+++ b/src/components/ProjectSlide/styles.module.css
@@ -1,10 +1,4 @@
-.section {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-
 .picture {
+    max-width: 100vh;
     width: 100%;
-    max-height: 100vh;
 }
