--- a/src/components/ProjectPage/styles.module.css
+++ b/src/components/ProjectPage/styles.module.css
@@ -2,9 +2,9 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 5% 0;
 }
 
 .picture {
-    max-width: 100vh;
-    width: 100%;
+    max-width: 100vw;
 }
