--- a/src/components/ProjectPage/styles.module.css
+++ b/src/components/ProjectPage/styles.module.css
@@ -2,10 +2,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: stretch;
     padding: 5% 0;
 }
 
 .picture {
     max-width: 100vw;
+    flex: 0 1 auto;
 }
