--- a/src/components/ProjectPage/styles.module.css
+++ b/src/components/ProjectPage/styles.module.css
@@ -2,10 +2,12 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
     padding: 5% 0;
 }
 
 .picture {
     max-width: 100vw;
+    height: auto;
     flex: 0 1 auto;
 }
