--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -25,17 +25,16 @@
 }
 
 .menuButton {
-    height: 0;
+    display: none;
 }
 
 .mobileMenu {
     background-color: white;
 }
 
-.mobileMenu button {
+.mobileMenu button:not(.closeMenu) {
     font-size: 3em;
     line-height: 2em;
-
 }
 
 .mobileMenuList {
@@ -45,7 +44,10 @@
 }
 
 .closeMenu {
-    height: 10%;
+    border: none;
+    background: none;
+    
+    height: 7%;
     width: auto;
     padding: 5%;
 }
@@ -60,6 +62,11 @@
     }
 
     .menuButton {
+        display: inline-block;
+
+        border: none;
+        background: none;
+
         height: 7%;
         width: auto;
         padding: 3%;
