--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -29,12 +29,12 @@
     display: none;
 }
 
-.mobileMenu button:not(.closeMenu) {
-    font-size: 2em;
-    line-height: 2em;
+.mobileMenu a, .mobileMenu button:not(.closeMenu) {
+    font-size: 2rem;
+    line-height: 2rem;
     font-weight: 900;
 
-    text-align: end;
+    justify-content: flex-end;
 }
 
 .mobileMenuList {
