--- a/src/style.css
+++ b/src/style.css
@@ -25,3 +25,20 @@ body {
 * {
     box-sizing: border-box;
 }
+
+h2 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 36px;
+    line-height: 48px;
+
+    color: #091133;
+}
+
+h3 {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    color: #091133;
+}
