--- a/src/style.css
+++ b/src/style.css
@@ -11,7 +11,7 @@
     --color-text-opposite: white;
     --color-button: #111b47;
 
-    --font-family: 'Roboto', sans-serif;
+    --font-family: 'Roboto', Helvetica, serif;
 }
 
 html,
