--- a/src/components/About/styles.module.css
+++ b/src/components/About/styles.module.css
@@ -5,6 +5,7 @@
 
     padding: 5%;
 
+    background-color: white;
 }
 
 .picture {
@@ -21,7 +22,7 @@
 @media screen and (max-width : 480px) {
     .container {
         flex-direction: column-reverse;
-        margin-bottom: 48px;
+        padding-bottom: 48px;
     }
 
     .picture {
