--- a/src/components/Hero/index.module.css
+++ b/src/components/Hero/index.module.css
@@ -1,5 +1,6 @@
 .description {
     color: #505f98;
+    max-width: 40%;
 }
 
 .content {
@@ -7,8 +8,8 @@
 }
 
 .heroButtons {
-    width: 50%;
-    min-width: 200px;
+    width: 40%;
+    min-width: 150px;
 
     padding-top: 64px;
 }
