--- a/src/components/Step/styles.module.css
+++ b/src/components/Step/styles.module.css
@@ -1,53 +1,38 @@
 .step {
     display: flex;
-    align-items: center;
-}
+    flex-direction: column;
+    justify-content: start;
+    /* align-items: center; */
 
-.content {
     width: 190px;
     margin-right: 24px;
 }
 
-.content p {
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 12px;
-    line-height: 18px;
+.step ul {
+    padding: 0;
+    list-style: none;
 }
 
-.icon {
-    width: 40px;
+.step li {
+    line-height: 1.25em;
+
+    position: relative;
+    padding: 8px 0px 8px 48px;
+    margin: 0px 0px 16px;
 }
 
-.arrow {
-    margin-right: 24px;
+.step ul li:before {
+    content: '';
+    position: absolute;
+    width: 32px;
+    height: 32px;
+
+    left: 0px;
+    top: 0px;
+
+    background-image: url('/static/plus-icon.png');
+    background-size: 32px;
 }
 
-@media screen and (max-width : 480px) {
-    .arrow {
-        display: none;
-    }
-
-    .content {
-        margin-right: 0;
-        margin-bottom: 48px;
-        width: 100%;
-
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .content h3 {
-        /* h2 size  */
-        font-size: 2rem;
-        line-height: 2.5rem;
-
-        margin: .25rem 0;
-    }
-
-    .icon {
-        width: 30%;
-    }
+@media screen and (max-width: 480px) {
 }
