--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -24,18 +24,18 @@
     width: 20%;
 }
 
-.header {
+/* .header {
     margin-bottom: 48px;
     color: #091133;
-}
+} */
 
-.title > h2 {
+/* .title > h2 {
     margin-bottom: 4px;
-}
+} */
 
-.subtitle > h3 {
+/* .subtitle > h3 {
     margin-top: 0;
-}
+} */
 
 @media screen and (max-width : 480px) {
     .container {
@@ -53,11 +53,11 @@
         padding: 0 10%;
     }
 
-    .header {
+    /* .header {
         display: flex;
         flex-direction: column;
         align-items: center;
 
         margin-bottom: 24px;
-    }
+    } */
 }
