--- a/src/components/Title/styles.module.css
+++ b/src/components/Title/styles.module.css
@@ -2,15 +2,35 @@
     font-family: Roboto;
     font-style: normal;
     font-weight: 500;
-    font-size: 50px;
-    line-height: 66px;
-
-    letter-spacing: 1px;
-
     color: #091133;
 }
 
-@media screen and (max-width : 480px) {
+.h1 {
+    font-size: 48px;
+    line-height: 64px;
+    letter-spacing: 1px;
+
+    margin-bottom: 48px;
+}
+
+.h2 {
+    font-size: 48px;
+    line-height: 48px;
+    letter-spacing: 1px;
+    font-weight: 900;
+
+    margin-bottom: 48px;
+}
+
+.h3 {
+    font-size: 36px;
+    line-height: 32px;
+    letter-spacing: 1px;
+
+    margin-bottom: 16px;
+}
+
+@media screen and (max-width: 480px) {
     .title {
         text-align: center;
     }
