--- a/src/style.css
+++ b/src/style.css
@@ -32,6 +32,8 @@ h2 {
     font-size: 36px;
     line-height: 48px;
     color: #091133;
+
+    margin: 0px;
 }
 
 h3 {
@@ -40,4 +42,6 @@ h3 {
     font-size: 24px;
     line-height: 26px;
     color: #091133;
+
+    margin: 0px;
 }
