faq upd + footer + menu upd

--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -1,8 +1,9 @@
 .container{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     padding: 0 10% 64px 10%;
+    width: 100%;
 }
 
 .pictureRight {
