--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -19,6 +19,7 @@
 
     display: flex;
     justify-content: flex-start;
+    align-items: flex-end;
 }
 
 .item {
@@ -32,7 +33,8 @@
 }
 
 .picture {
-    max-width: 200px;
+    max-width: 300px;
+    max-height: 300px;
     margin-bottom: 24px;
 }
 
