--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -19,7 +19,7 @@
 
     display: flex;
     justify-content: flex-start;
-    align-items: flex-end;
+    align-items: baseline;
 }
 
 .item {
@@ -33,8 +33,8 @@
 }
 
 .picture {
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 200px;
+    max-height: 200px;
     margin-bottom: 24px;
 }
 
