--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -1,6 +1,5 @@
 .container {
-    padding: 5%;
-    /* min-height: 100vh; */
+    padding: 5% 10%;
 
     display: flex;
     flex-direction: column;
