--- a/src/components/Step/styles.module.css
+++ b/src/components/Step/styles.module.css
@@ -46,6 +46,8 @@
     font-size: 32px;
     line-height: 40px;
     font-weight: bold;
+
+    white-space: nowrap;
 }
 
 @media screen and (max-width: 480px) {
