--- a/src/components/About/styles.module.css
+++ b/src/components/About/styles.module.css
@@ -22,6 +22,7 @@
 @media screen and (max-width : 480px) {
     .container {
         flex-direction: column-reverse;
+        padding-top: 20%;
         padding-bottom: 48px;
     }
 
