--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -30,7 +30,7 @@
 /* THEME */
 
 .themeDefault {
-    background: none;
+    background: rgba(255, 255, 255, 0.7);
     color: var(--color-button);
     border: 2px solid var(--color-button);
 }
