--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,11 @@
     --border-radius: 10px;
     --button-border-radius: 10px;
 
+    --color-logo: #111b47;
     --button-background-primary: #111b47;
 
     --color-background: white;
-    --color-text: black;
+    --color-text: #505f98;
     --color-text-opposite: white;
     --color-button: #111b47;
 
