--- a/src/components/Step/styles.module.css
+++ b/src/components/Step/styles.module.css
@@ -15,7 +15,7 @@
 
 .step li {
     line-height: 1.25em;
-
+    color: var(--color-text);
     position: relative;
     padding: 8px 0px 8px 48px;
     margin: 0px 0px 16px;
