--- a/src/components/About/styles.module.css
+++ b/src/components/About/styles.module.css
@@ -1,31 +1,36 @@
 .container {
     display: flex;
     justify-content: space-around;
-    align-items: center;
-
-    padding: 5%;
-
+    align-items: flex-start;
     background-color: white;
 }
 
 .picture {
-    max-width: 45%;
-    object-fit: contain;
+    flex: 1;
+    width: 50%;
+    max-width: 1200px;
+    min-width: 200px;
+    padding: 1em 1em 0;
+}
 
-    margin-right: 128px;
+.picture img {
+    display: block;
+    width: 100%;
+    object-fit: contain;
 }
 
 .text {
+    flex: 1;
     color: var(--color-text);
+    padding: 0 1em 0;
 }
 
-@media screen and (max-width : 480px) {
+@media screen and (max-width: 480px) {
     .container {
         flex-direction: column-reverse;
         padding-top: 20%;
         padding-bottom: 48px;
     }
-
     .picture {
         max-width: 100%;
         margin-right: 0;
