--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -6,7 +6,7 @@
     justify-content: space-between;
     align-items: center;
 
-    background-color: #E7ECFF;
+    background-color: rgba(204, 215, 255, 0.5);
 }
 
 .title {
