--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -30,7 +30,7 @@
 /* THEME */
 
 .themeDefault {
-    background: rgba(255, 255, 255, 0.7);
+    background: none;
     color: var(--color-button);
     border: 2px solid var(--color-button);
 }
@@ -91,4 +91,9 @@
     .sizeDefault {
         padding: 8px 24px;
     }
+
+    .themeDefault {
+        background:rgba(255, 255, 255, 0.7);
+    }
+    
 }
