--- a/src/style.css
+++ b/src/style.css
@@ -23,8 +23,17 @@ body {
     font-family: var(--font-family);
 }
 
-* {
+* { 
     box-sizing: border-box;
+}
+
+a {
+    color: var(--color-text);
+}
+
+a:hover {
+    color: #ffffff;
+    background-color: var(--color-button);
 }
 
 h2 {
