--- a/src/components/Title/styles.module.css
+++ b/src/components/Title/styles.module.css
@@ -6,18 +6,18 @@
 }
 
 .h1 {
-    font-size: 48px;
+    font-size: 64px;
     line-height: 64px;
-    letter-spacing: 1px;
+    letter-spacing: 2px;
     font-weight: 900;
     margin-bottom: 48px;
 }
 
 .h2 {
     text-align: center;
-    font-size: 48px;
-    line-height: 48px;
-    letter-spacing: 1px;
+    font-size: 60px;
+    line-height: 60px;
+    letter-spacing: 2px;
     font-weight: 900;
 
     margin-bottom: 48px;
@@ -27,12 +27,24 @@
     font-size: 36px;
     line-height: 32px;
     letter-spacing: 1px;
-
-    margin-bottom: 16px;
+    font-weight: 800;
+    margin-bottom: 8px;
 }
 
 @media screen and (max-width: 480px) {
     .title {
         text-align: center;
     }
+    .h1 {
+        font-size: 48px;
+        line-height: 50px;
+    }
+    .h2 {
+        font-size: 48px;
+        line-height: 50px;
+    }
+    .h3 {
+        text-align: left;
+    }
 }
+
