--- a/src/components/Stories/styles.module.css
+++ b/src/components/Stories/styles.module.css
@@ -4,6 +4,8 @@
     align-items: center;
     padding: 5%;
 
+    position: relative;
+    z-index: -1;
 }
 
 @media screen and (max-width : 480px) {
