--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -1,8 +1,9 @@
 .container{
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
-    padding: 0 10% 64px 10%;
+    /* padding: 0 10% 64px 10%; */
+    margin-bottom: 64px;
     width: 100%;
 }
 
@@ -14,15 +15,37 @@
     margin-right: 5%;
 }
 
-.picture {
+/* .picture {
     max-width: 33%;
 
     max-height: 100%;
     position: relative;
+} */
+
+/* .spacer{
+    width: 20%;
+} */
+
+.text {
+    flex: 4;
 }
 
-.spacer{
-    width: 20%;
+.avatar {
+    --s: 200px;
+    width: var(--s);
+    height: var(--s);
+    position: relative;
+
+    flex: 1;
+    margin-right: 10%;
+}
+
+.avatar img {
+    border-radius: 50%;
+    width: 100%;
+    height: 100%;
+    display: block;
+    object-fit: cover;
 }
 
 @media screen and (max-width : 480px) {
