--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -50,17 +50,12 @@
 
 @media screen and (max-width : 480px) {
     .container {
-        flex-wrap: wrap;
-        padding: 0 0 64px 0;
+        flex-direction: column;
+        align-items: center;
     }
 
-    .spacer {
-        display: none;
-    }
-
-    .picture {
-        order: -1;
-        max-width: none;
-        padding: 0 10%;
+    .avatar {
+        margin-bottom: 48px;
+        margin-right: 0;
     }
 }
