--- a/src/components/Step/styles.module.css
+++ b/src/components/Step/styles.module.css
@@ -1,7 +1,7 @@
 .step {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     /* align-items: center; */
 
     width: 190px;
