--- a/src/components/About/styles.module.css
+++ b/src/components/About/styles.module.css
@@ -23,6 +23,7 @@
     flex: 1;
     color: var(--color-text);
     padding: 0 1em 0;
+    line-height: 1.5em;
 }
 
 @media screen and (max-width: 480px) {
