--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -14,13 +14,13 @@
 }
 
 .left {
-    flex: 2;
+    flex: 1;
     display: flex;
     flex-direction: row;
 }
 
 .right {
-    flex: 2;
+    flex: 1;
     display: flex;
     flex-direction: row-reverse;
 }
@@ -57,6 +57,16 @@
 
 .transparent {
     background-color: transparent;
+}
+
+@media screen and (max-width : 1280px) {
+    .left {
+        order: 1;
+    }
+    .right {
+        flex: none;
+        order: 2;
+    }
 }
 
 @media screen and (max-width : 480px) {
