--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -8,4 +8,14 @@
     color: var(--color-logo);
 
     text-decoration: none;
+
+    padding: 0 5%;
+    flex: 1;
+}
+
+@media screen and (max-width : 1280px) {
+    .logo {
+        padding: 0;
+        text-align: start;
+    }
 }
