--- a/src/components/Logo/styles.module.css
+++ b/src/components/Logo/styles.module.css
@@ -19,3 +19,9 @@
         text-align: start;
     }
 }
+
+@media screen and (max-width : 480px) {
+    .logo {
+        text-align: center;
+    }
+}
