--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -46,6 +46,8 @@
     height: 100%;
     display: block;
     object-fit: cover;
+
+    position: relative;
 }
 
 @media screen and (max-width : 480px) {
