--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -36,6 +36,7 @@
 }
 
 .themePrimary {
+    --color-text: #ffffff;
     background: var(--color-button);
     border: 2px solid var(--color-button);
 }
