--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -15,19 +15,12 @@
     margin-right: 5%;
 }
 
-/* .picture {
-    max-width: 33%;
-
-    max-height: 100%;
-    position: relative;
-} */
-
-/* .spacer{
-    width: 20%;
-} */
-
 .text {
     flex: 4;
+}
+
+.spacer {
+    width: 10%;
 }
 
 .avatar {
@@ -37,7 +30,6 @@
     position: relative;
 
     flex: 1;
-    margin-right: 10%;
 }
 
 .avatar img {
