--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -55,4 +55,9 @@
         flex-direction: column;
         align-items: center;
     }
+
+    .picture {
+        max-width: 200px;
+        max-height: 200px;
+    }
 }
