blocks width test

--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -38,6 +38,12 @@
     margin-bottom: 24px;
 }
 
+@media screen and (max-width : 1280px) {
+    .container {
+        padding: 5%;
+    }
+}
+
 @media screen and (max-width : 480px) {
     .container {
         padding-top: 20%;
