--- a/src/components/Steps/styles.module.css
+++ b/src/components/Steps/styles.module.css
@@ -1,13 +1,13 @@
 .container {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     width: 100%;
     padding: 0 5%;
     padding-top: 32px;
 }
 
-@media screen and (max-width : 480px) {
+@media screen and (max-width : 1280px) {
     .container {
         flex-wrap: wrap;
     }
