--- a/src/components/About/styles.module.css
+++ b/src/components/About/styles.module.css
@@ -10,7 +10,7 @@
     width: 50%;
     max-width: 1200px;
     min-width: 200px;
-    padding: 1em 1em 0;
+    padding: 1em 1em 0 0;
 }
 
 .picture img {
@@ -32,6 +32,6 @@
     }
     .picture {
         width: 100%;
-        margin-right: 0;
+        padding: 1em;
     }
 }
