--- a/src/components/PageSection/styles.module.css
+++ b/src/components/PageSection/styles.module.css
@@ -18,5 +18,11 @@
 }
 
 .content {
-    padding: 0 5%;
+    padding: 0 15%;
+}
+
+@media screen and (max-width : 1280px) {
+    .content {
+        padding: 0 5%;
+    }
 }
