--- a/src/components/PageSection/styles.module.css
+++ b/src/components/PageSection/styles.module.css
@@ -10,6 +10,7 @@
     overflow-y: hidden;
 }
 
+
 .back {
     position: absolute;
     width: 100%;
@@ -21,8 +22,16 @@
     padding: 0 15%;
 }
 
+.fullContent {
+    width: 100%;
+    height: 100%;
+    padding-top: 10%;
+    padding-bottom: 10%;
+}
+
 @media screen and (max-width : 1280px) {
     .content {
-        padding: 0 5%;
+        padding-left: 5%;
+        padding-right: 5%;
     }
 }
