--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -8,9 +8,11 @@
 
     padding: 4px 15%;
 
-    z-index: 1000;
+    /* z-index: 1000; */
 
     background-color: var(--color-background);
+    
+    box-shadow: 0 2px 2px #666;
 }
 
 .menu {
