--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -12,7 +12,7 @@
 
     background-color: var(--color-background);
     
-    box-shadow: 0 2px 2px #666;
+    box-shadow: 0 2px 2px #ddd;
 }
 
 .menu {
