--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -2,40 +2,45 @@
     padding: 5% 15%;
 
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     align-items: center;
 
     background-color: rgba(204, 215, 255, 0.5);
 }
 
-.title {
-    margin-bottom: 5%;
-}
-
 .items {
-    width: 100%;
-
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: baseline;
 }
 
 .item {
-    width: 100%;
     margin-right: 5%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .text {
     color: var(--color-text);
-    line-height: 1.5em;
+    line-height: 10px;
+    font-size: 10px;
+    text-align: center;
+    color: #5D6970;
+
+    flex: 1 0 auto;
+}
+
+.year {
+    flex: 0 0 100px;
 }
 
 .picture {
     display: block;
     max-width: 100px;
     max-height: 100px;
-    margin-bottom: 24px;
 }
 
 @media screen and (max-width : 1280px) {
@@ -47,10 +52,15 @@
 @media screen and (max-width : 480px) {
     .container {
         padding-top: 20%;
-    }
 
-    .items {    
-        flex-wrap: wrap;
+        flex-direction: column-reverse;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .items {
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
     }
 
     .item {
@@ -60,6 +70,11 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+
+    .text {
+        line-height: 1rem;
+        font-size: 1rem;
     }
 
     .picture {
