--- a/src/components/Footer/styles.module.css
+++ b/src/components/Footer/styles.module.css
@@ -41,6 +41,8 @@
     display: block;
     max-width: 100px;
     max-height: 100px;
+
+    padding-bottom: 10%;
 }
 
 @media screen and (max-width : 1280px) {
