--- a/src/components/Header/styles.module.css
+++ b/src/components/Header/styles.module.css
@@ -12,7 +12,7 @@
 
     background-color: var(--color-background);
     
-    box-shadow: 0 2px 2px #ddd;
+    box-shadow: 0 3px 5px rgba(9, 17, 51, 0.1)
 }
 
 .menu {
