--- a/src/components/Step/styles.module.css
+++ b/src/components/Step/styles.module.css
@@ -5,7 +5,7 @@
     /* align-items: center; */
 
     width: 190px;
-    margin-right: 24px;
+    margin-right: 48px;
 }
 
 .step ul {
@@ -19,6 +19,9 @@
     position: relative;
     padding: 8px 0px 8px 48px;
     margin: 0px 0px 16px;
+
+    white-space: pre-wrap;
+    text-align: start;
 }
 
 .step ul li:before {
@@ -46,10 +49,4 @@
     font-weight: bold;
     
     white-space: nowrap;
-}
-
-@media screen and (max-width: 1280px) {  /* ! 1280 ! */
-    .head h3 {
-        white-space: normal;
-    }
 }
