--- a/src/components/Steps/styles.module.css
+++ b/src/components/Steps/styles.module.css
@@ -1,44 +1,25 @@
 .container {
     width: 100%;
-    padding: 0 5%;
     padding-top: 32px;
-}
 
-.galleryContainer {
-    width: 100%;
-    display: none;
-}
-
-.test {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-
-    height: 600px;
-}
-
-.noGallery {
     display: flex;
     justify-content: flex-start;
 }
 
+.container :last-child {
+    margin-right: 0;
+}
+
 @media screen and (max-width : 1280px) {
-    .noGallery {
-        display: none;
-    }
-    .galleryContainer {
-        display: block;
+    .container {
+        justify-content: flex-start;
+        flex-wrap: wrap;
     }
 }
 
 @media screen and (max-width : 480px) {
-    .noGallery {
-        display: flex;
-    }
-    .galleryContainer {
-        display: none;
-    }
-    .container, .noGallery {
-        overflow-x: scroll;
+    .container {
+        padding: 0 5%;
+        justify-content: center;
     }
 }
