mobile safari test

--- a/src/components/Story/styles.module.css
+++ b/src/components/Story/styles.module.css
@@ -43,6 +43,7 @@
     .container {
         flex-direction: column;
         align-items: center;
+        justify-content: flex-start;
     }
 
     .avatar {
